[Home]

Summary:ASTERISK-22365: [patch] chan_h323 can't be compiled
Reporter:Dmitry Melekhov (slesru)Labels:
Date Opened:2013-08-22 05:58:51Date Closed:2013-09-06 11:06:01
Priority:MinorRegression?
Status:Closed/CompleteComponents:Channels/chan_h323
Versions:11.5.0 Frequency of
Occurrence
Related
Issues:
Environment:Centos 5/x86Attachments:( 0) chan_h323.patch
Description: [CC] chan_h323.c -> chan_h323.o
chan_h323.c: In function '__oh323_update_info':
chan_h323.c:349: error: dereferencing pointer to incomplete type
chan_h323.c:350: error: dereferencing pointer to incomplete type
chan_h323.c: In function 'oh323_rtp_read':
chan_h323.c:790: error: dereferencing pointer to incomplete type
chan_h323.c:791: error: dereferencing pointer to incomplete type
chan_h323.c: In function 'oh323_write':
chan_h323.c:857: error: dereferencing pointer to incomplete type
chan_h323.c:857: error: dereferencing pointer to incomplete type
chan_h323.c: In function '__oh323_new':
chan_h323.c:1064: error: dereferencing pointer to incomplete type
chan_h323.c:1065: error: dereferencing pointer to incomplete type
chan_h323.c:1066: error: dereferencing pointer to incomplete type
chan_h323.c:1067: error: dereferencing pointer to incomplete type
chan_h323.c: In function 'setup_rtp_connection':
chan_h323.c:2082: error: dereferencing pointer to incomplete type
chan_h323.c:2082: error: dereferencing pointer to incomplete type
chan_h323.c:2085: error: dereferencing pointer to incomplete type
chan_h323.c:2086: error: dereferencing pointer to incomplete type
make[1]: *** [chan_h323.o] Error 1
make: *** [channels] Error 2

Comments:By: Dmitry Melekhov (slesru) 2013-08-22 05:59:44.314-0500

although it is deprecated , it can be compiled with small patch :-)


By: Dmitry Melekhov (slesru) 2013-08-22 06:00:19.906-0500

patch